// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default WeatherHere - not loaded 1`] = `
<div
  className="mb-5 container"
>
  <div
    className="m-0 weather-here d-flex align-items-center justify-content-between row"
  >
    <h1>
      Weather Here
    </h1>
    <button
      className="bg-success border-0 btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Update Geolocation
    </button>
    <div
      className="w-25 invisible"
    >
      f
    </div>
  </div>
  <div
    className="weather-block--big d-flex align-items-center justify-content-center"
  >
    <div
      className="preloader"
    />
  </div>
</div>
`;

exports[`WeatherHere - loaded 1`] = `
<div
  className="mb-5 container"
>
  <div
    className="m-0 weather-here d-flex align-items-center justify-content-between row"
  >
    <h1>
      Weather Here
    </h1>
    <button
      className="bg-success border-0 btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Update Geolocation
    </button>
    <div
      className="w-25 invisible"
    >
      f
    </div>
  </div>
  <div
    className="p-0 d-flex container"
  >
    <div
      className="p-0  col-md-7"
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <p
            className="city-temperature-geo-block__city-name"
          >
            Msk
          </p>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-4"
          >
            <img
              alt="icon"
              className="city-temperature-geo-block__icon"
              src="https://openweathermap.org/img/wn/01n@2x.png"
            />
          </div>
          <div
            className="col"
          >
            <span
              className="city-temperature-geo-block__temperature"
            >
              10
              °C
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="p-0 d-flex align-items-center col"
    >
      <div
        className="container"
      >
        <div
          className="measure-block-item measure-block-item--blue d-flex mt-md-1 justify-content-between row"
        >
          <div
            className="col"
          >
            Wind
          </div>
          <div
            className="d-flex justify-content-end font-weight-light col"
          >
            10 m/s
          </div>
        </div>
        <div
          className="measure-block-item measure-block-item--red d-flex mt-md-1 justify-content-between row"
        >
          <div
            className="col"
          >
            Clouds
          </div>
          <div
            className="d-flex justify-content-end font-weight-light col"
          >
            20 %
          </div>
        </div>
        <div
          className="measure-block-item measure-block-item--yellow d-flex mt-md-1 justify-content-between row"
        >
          <div
            className="col"
          >
            Pressure
          </div>
          <div
            className="d-flex justify-content-end font-weight-light col"
          >
            30 hpa
          </div>
        </div>
        <div
          className="measure-block-item measure-block-item--green d-flex mt-md-1 justify-content-between row"
        >
          <div
            className="col"
          >
            Humidity
          </div>
          <div
            className="d-flex justify-content-end font-weight-light col"
          >
            40 %
          </div>
        </div>
        <div
          className="measure-block-item measure-block-item--pink d-flex mt-md-1 justify-content-between row"
        >
          <div
            className="col"
          >
            Coordinates
          </div>
          <div
            className="d-flex justify-content-end font-weight-light col"
          >
            [50, 60]
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
